[package]
name = "paths"
version = "0.1.0"
authors = ["Simon Berg <ksb@fluffware.se>"]

[[bin]]
name = "paths"
path = "src/main.rs"

[[bin]]
name = "animate_curve"
path = "src/animate_curve.rs"

[[bin]]
name = "svg_path"
path = "src/svg_path.rs"

[[bin]]
name = "image_raster"
path = "src/image_raster.rs"

[dependencies]

libc="0.2.30"
num="0.4"
serial="*"
xml-rs = "0.8"
nom = "7"
getopts = "0.2"
serde = {version = "*", features=["derive"]}
serde_json = "1.0"
image = "0.23.*"
approx = "*"
static_assertions = "1.1.0"